Closed Bug 578237 Opened 14 years ago Closed 14 years ago

Fix error message in nsComponentManagerImpl::RegisterCIDEntry

Categories

(Core :: XPCOM, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b2

People

(Reporter: imphil, Assigned: imphil)

Details

Attachments

(1 file)

Attached patch patchSplinter Review
fix wrong and confusing error message (see patch)
Attachment #456973 - Flags: review?(benjamin)
Comment on attachment 456973 [details] [diff] [review]
patch

Whoops.
Attachment #456973 - Flags: review?(benjamin) → review+
Keywords: checkin-needed
http://hg.mozilla.org/mozilla-central/rev/17dc041b9884
Assignee: nobody → mail
Status: NEW → RESOLVED
Closed: 14 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3b2
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: