Bug 578237: Fix error message in nsComponentManagerImpl::RegisterCIDEntry. r=bsmedberg