xpcom/components/nsComponentManager.cpp
@@ -478,7 +478,7 @@ nsComponentManagerImpl::RegisterCIDEntry(const mozilla::Module::CIDEntry* aEntry
         else
             existing = "<unknown module>";
 
-        LogMessage("While registering XPCOM module, trying to re-register CID '%s' already registered by %s.",
+        LogMessage("While registering XPCOM module %s, trying to re-register CID '%s' already registered by %s.",
                    aModule->Description().get(),
                    idstr,
                    existing.get());
